[package]
name = "gulp"
version = "0.1.0"
authors = ["Magnus Manske <mm6@sanger.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
regex = "1"
wikibase = { git="https://gitlab.com/tobias47n9e/wikibase_rs"}
serde = "1"
serde_json = "1"
nom-bibtex = "*"
chrono = "*"
axum = "0.6.2"
tracing = "*"
tracing-subscriber = "*"
ureq = "2"
tower-http = { version = "0.3", features = ["cors","compression-gzip","trace"] }
